--- a/README
+++ b/README
@@ -12,19 +12,19 @@ parallelization. To run it you need a multicore machine.
 
 2.Install the parallel package from Hackage. For instance by typing
 
- 	$cabal install parallel
+ 	 cabal install parallel
 
-   if you have cabal installed.
+   at the command prompt, if you have cabal installed.
 
 3.Install the random package from Hackage. For instance by typing
 
-	$cabal install random
+	cabal install random
 
 4.To compile type
 
-	$ghc -threaded -O2 <program name>.hs --make -fforce-recomp
+	ghc -threaded -O2 <program name>.hs --make -fforce-recomp
 
 5.To run the program use
 	
-	$./<program name> +RTS -N
+	./<program name> +RTS -N
 
