--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 ================================================================================================
 
-This a couple of programs that implement two well known randomized primality testing algorithms:
+These are a couple of programs that implement two well known randomized primality testing algorithms:
 Miller-Rabin and Solovay-Strassen. 
 
 The idea was to test Haskell's support for concurrency and
